[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Righteous-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/PopUp.png" type="Texture" id=2]
[ext_resource path="res://images/continuar_juego.png" type="Texture" id=3]
[ext_resource path="res://images/salir_juego.png" type="Texture" id=4]
[ext_resource path="res://juego_Botanica/HUDs/PausaMenu.gd" type="Script" id=5]
[ext_resource path="res://SFX/3.1. mouse-click1.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[node name="PausaMenu" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 224.0
margin_top = 71.0
margin_right = 830.0
margin_bottom = 519.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_left = 0.271
anchor_top = 0.152
anchor_right = 0.754
anchor_bottom = 0.868
margin_left = -0.226013
margin_top = -0.0960083
margin_right = 0.0759888
margin_bottom = 0.135986

[node name="Label" type="Label" parent="TextureRect/VBoxContainer"]
margin_right = 293.0
margin_bottom = 51.0
rect_min_size = Vector2( 20, 50 )
custom_fonts/font = SubResource( 1 )
text = "Pausa"
align = 1

[node name="Resumir" type="TextureButton" parent="TextureRect/VBoxContainer"]
margin_top = 55.0
margin_right = 293.0
margin_bottom = 152.0
texture_normal = ExtResource( 3 )

[node name="Salir" type="TextureButton" parent="TextureRect/VBoxContainer"]
margin_top = 156.0
margin_right = 293.0
margin_bottom = 253.0
texture_normal = ExtResource( 4 )

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="pressed" from="TextureRect/VBoxContainer/Resumir" to="." method="_on_Resumir_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Salir" to="." method="_on_Salir_pressed"]
